--- a/index.html
+++ b/index.html
@@ -1,56 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Anonymous Voting App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-    }
-    .poll {
-      background: white;
-      padding: 15px;
-      border-radius: 10px;
-      max-width: 500px;
-      margin: 20px auto;
-    }
-    button {
-      display: block;
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      font-size: 16px;
-      border: none;
-      border-radius: 6px;
-      background: #007aff;
-      color: white;
-      cursor: pointer;
-    }
-    button:disabled {
-      background: gray;
-    }
-    .results {
-      margin-top: 15px;
-      font-weight: bold;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Anonymous Voting App</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+font-family: Arial, sans-serif;
+background: #f5f5f5;
+padding: 20px;
+}
+h1 {
+text-align: center;
+color: #333;
+}
+.poll {
+background: white;
+padding: 20px;
+border-radius: 10px;
+box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+max-width: 500px;
+margin: 20px auto;
+text-align: center;
+}
+.poll p {
+font-size: 18px;
+margin-bottom: 20px;
+color: #555;
+}
+button {
+display: block;
+width: 100%;
+padding: 12px 20px;
+margin: 8px 0;
+font-size: 16px;
+border: none;
+border-radius: 6px;
+background: #007aff;
+color: white;
+cursor: pointer;
+transition: background-color 0.3s ease;
+}
+button:hover:not(:disabled) {
+background: #0056b3;
+}
+button:disabled {
+background: #cccccc;
+cursor: not-allowed;
+}
+.results {
+margin-top: 25px;
+padding: 15px;
+background: #e9e9e9;
+border-radius: 10px;
+max-width: 500px;
+margin: 20px auto;
+text-align: left;
+font-size: 16px;
+color: #333;
+}
+.results strong {
+font-size: 20px;
+display: block;
+margin-bottom: 10px;
+color: #007aff;
+}
+</style>
 </head>
-
 <body>
-  <h1>Anonymous Voting</h1>
-
-  <div class="poll">
-    <p id="question">
-      Which teacher do you like the most?
-    </p>
-
-    <button onclick="vote(0)">Iwahashi</button>
-    <button onclick="vote(1)">Consolati</button>
-    <button onclick="vote(2)">Cao<
+<h1>Anonymous Voting</h1>
+<div class="poll">
+<p id="question">
+</p>
+<button onclick="vote(0)">Iwahashi</button>
+<button onclick="vote(1)">Consolati</button>
+<button onclick="vote(2)">Cao</button>
+</div>
+<div id="results" class="results">
+Results:<br>
+Iwahashi: 0<br>
+Consolati: 0<br>
+</div>
+<!-- JavaScriptファイルを読み込む -->
+<script src="script.js"></script>
+</body>
+</html
